# nishi-xv

./: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
src/jpeg/: Makefile.am  Makefile.in  jconfig.h
src/png/: Makefile.am  Makefile.in
src/tiff/: Makefile.am  Makefile.in  tif_aux.c  tif_jpeg.c  tif_tile.c
src/xv/: Makefile.am  Makefile.in  xv.h  xvtext.c
src/zlib/: Makefile.am  Makefile.in
