bin_PROGRAMS = xv
xv_SOURCES = vprintf.c xv.c xv24to8.c xvalg.c xvbmp.c xvbrowse.c xvbutt.c xvcolor.c xvctrl.c xvcut.c xvdflt.c xvdial.c xvdir.c xvevent.c xvfits.c xvgam.c xvgif.c xvgifwr.c xvgrab.c xvgraf.c xvhips.c xviff.c xvimage.c xvinfo.c xviris.c xvjp2k.c xvjpeg.c xvmag.c xvmaki.c xvmgcsfx.c xvmisc.c xvml.c xvpbm.c xvpcd.c xvpcx.c xvpds.c xvpi.c xvpic.c xvpic2.c xvpm.c xvpng.c xvpopup.c xvps.c xvrle.c xvroot.c xvscrl.c xvsmooth.c xvsunras.c xvtarga.c xvtext.c xvtiff.c xvtiffwr.c xvvd.c xvwbmp.c xvxbm.c xvxpm.c xvxwd.c xvzx.c
xv_CPPFLAGS = -fcommon $(X11_CFLAGS) -I../jpeg -I../tiff -I../png -DDOJPEG -DDOTIFF -DDOPNG
xv_LDADD = $(MATH_LIBS) $(X11_LIBS) ../png/libpng.a ../jpeg/libjpeg.a ../tiff/libtiff.a ../zlib/libz.a
